  - New characters '1h' and '8h' have been contributed by Masayoshi Itoh.
* Dash button has been added:
  - New parameters 'maxVxDashing' and 'axNormalDashing' have been added.
  - Input status indicator now displays the second button's status.
  - The dash button can now be assigned to a joystick button.
  - Some preset styles have been updated.
* Some minor bug fixes and code cleanups.

Version 1.1.1 (2020.8.27)
-------------------------
* New jump feature:
  - Wall jump
* New UI feature:
  - New 'JUMP2' tab
* Fixed a bug when no joystick configuration file was found.
* Some minor bug fixes and code cleanups.

Version 1.1.0 (2020.8.22)
-------------------------
* New camera feature:
  - BG scrolling speed
    - Parallax scrolling is now encompassed by this.
* New UI features:
  - 'Pause' and 'step-forward' have been added.
  - The joystick buttons are now configurable.
  - User settings files are now versioned.
* Some minor bug fixes and code cleanups.

Version 1.0.0 (2020.8.11)
-------------------------
* New UI features:
  - New 'Misc' tab
  - Afterimage mode
  - Input status indicator
* Preset styles improved.
* Some minor bug fixes.
* Many code cleanups.

Version 0.9.0 (2020.8.10)
-------------------------

* New jump features:
  - Constant rising speed
  - Horizontal braking
  - Halted and fall
  - Collision tolerance
  - Jump power bonus
  - Horizontal velocity adjustment at takeoff
  - Aerial turn
* New camera features:
  - Camera window
  - Platform snapping
  - Forward focus
  - Projected focus
* New UI features:
  - Presets (the reset button has been deprecated)
  - FPS indicator
  - Joystick support
  - Realtime chart
* The renderer has been changed back to JAVA2D.
  - On some environment, P2D causes a long delay in setup().
* Some minor bug fixes.
* Many code cleanups.

Version 0.1.1 (2020.7.28)
-------------------------

* The renderer has been changed to P2D from JAVA2D.
* Some minor bug fixes.
* Some code cleanups.

Version 0.1.0 (2020.7.27)